# pancanga-engine

./: .dockerignore  .gitignore  CERTIFICATION.md  LICENSE  PANCANGA_ENGINE_MASTER_REFERENCE.md  PROJECT_PRINCIPLES.md  PROJECT_STATUS.md  README.md  WHY_PANCANGA_ENGINE_EXISTS.md
00_Project/: CHANGELOG.md  Component-Maturity.md  TODO.md  (+9 more)
03_Source/rust/crates/pancanga-engine/: Cargo.toml
03_Source/rust/crates/pancanga-engine/benches/: astronomy_algorithms.rs  core_math.rs
03_Source/rust/crates/pancanga-engine/examples/: gcal_fixture_import.rs  internal_stress_test.rs  parana_diagnostic.rs  purebhakti_html_extract.rs  purebhakti_validation.rs  rc1_experience.rs  scsmath_validation.rs  swiss_validation.rs
03_Source/rust/crates/pancanga-engine/src/: lib.rs
03_Source/rust/crates/pancanga-engine/src/astronomy/: elongation.rs  mod.rs  moon.rs  nakshatra.rs  solar.rs  tithi.rs
03_Source/rust/crates/pancanga-engine/src/astronomy/algorithms/: ast_0001.rs  ast_0002.rs  ast_0003.rs  ast_0004.rs  ast_0005.rs  ast_0006.rs  ast_0007.rs  ast_l001.rs  ast_l002.rs  ast_l003.rs  ast_l004.rs  ast_l005.rs  ast_l006.rs  elp2000_evaluator.rs  mod.rs  vsop87d_earth_longitude.rs  vsop87d_earth_radius.rs
03_Source/rust/crates/pancanga-engine/src/calendar/: mod.rs  sunrise.rs  tithi.rs
03_Source/rust/crates/pancanga-engine/src/core/: mod.rs
03_Source/rust/crates/pancanga-engine/src/vaishnava/: ekadasi.rs  mod.rs
03_Source/rust/crates/pancanga-engine/tests/: julian.rs
03_Source/rust/tools/elp2000-importer/: Cargo.toml
03_Source/rust/tools/elp2000-importer/src/: lib.rs  main.rs
(+219 files in other folders)
